version/1.2/_sources/index.rst.txt
PyAEDT documentation  |version|
===============================

**Useful links**:
`Installation <https://aedt.docs.pyansys.com/version/stable/Getting_started/Installation.html>`_ |
`Source Repository <https://github.com/ansys/pyaedt>`_ |
`Issues <https://github.com/ansys/pyaedt/issues>`_ |
`Extensions <https://aedt.docs.pyansys.com/version/stable/User_guide/extensions.html>`_

.. figure:: _static/logo.png
    :align: center
    :width: 640px

PyAEDT is a Python client library that interacts directly with the Ansys Electronics Desktop (AEDT) API,
enabling straightforward and efficient automation in your workflow.

.. note:: Expected breaking changes with version `1.0`
   If you want to know more about the breaking changes expected
   in the incoming version `1.0`, see the :ref:`release_1_0`.

.. note::
    Also consider viewing the `PyEDB documentation <https://edb.docs.pyansys.com/version/stable/>`_.
    PyEDB is a Python client library for processing complex and large layout designs in the Ansys
    Electronics Database (EDB) format, which stores information describing designs for AEDT.

.. grid:: 2

    .. grid-item-card:: Getting started :fa:`person-running`
        :link: Getting_started/index
        :link-type: doc

        New to PyAEDT? This section provides the information that you need to get started with PyAEDT.

    .. grid-item-card:: User guide :fa:`book-open-reader`
        :link: User_guide/index
        :link-type: doc

        This section provides in-depth information on PyAEDT key concepts.

.. grid:: 2

    .. grid-item-card::  API reference :fa:`book-bookmark`
        :link: API/index
        :link-type: doc

        This section contains descriptions of the functions and modules included in PyAEDT.
        It describes how the methods work and the parameters that can be used.

    .. grid-item-card:: Examples :fa:`scroll`
        :link: https://examples.aedt.docs.pyansys.com/

        Explore examples that show how to use PyAEDT to perform different types of simulations.

.. grid:: 2

    .. grid-item-card:: Contribute :fa:`people-group`
        :link: Getting_started/Contributing
        :link-type: doc

        Learn how to contribute to the PyAEDT codebase or documentation.


.. toctree::
    :hidden:


    Getting_started/index
    User_guide/index
    API/index
    Examples <https://examples.aedt.docs.pyansys.com/>
    changelog